=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.12-dev

=item 1.11 - May 21, 2004

if we fail to match the Apache revision (which is OK at the early
stages, like 'perl Makefile.PL', default to a non-existing revision
0. But provide no more misleading defaults (used to default to
revision 2 and then looking for mod_perl2). [Stas]

Improve the regex to match the Apache revision out of 'httpd -v'
[Michael A Nachbaur <mike@nachbaur.com>]

-minclients is now what -maxclients used to be, -maxclients is now
really what it says it is [Stas]

Fix Apache::TestRequest::lwp_as_string to work with LWP 5.79 [Stas]




=item 1.10 - April 18, 2004

Quote and escape the executables in the shell calls [Ken Coar, Stas]

Quote and escape filtered args received during 'perl Makefile.PL'
[Geoffrey Young, Ken Coar]

add :withtestmore import tag to Apache::Test, which will export
all standard Apache::Test symbols except those that collide with
Test::More.  [Geoffrey Young]

Use function prototypes in Apache::TestUtil functions t_cmp() and
t_is_equal() to handle the case when an argument to the function, is a
function call itself which may return undef (previously had to
explicitly force a scalar context to get the undef value). The idea
was borrowed from Test::More. [Stas]

Fixed a Windows-only segment which would result in a
'use of uninitialised value' error if a hash being traversed
had an entry with a key but an undefined value.  [Ken]

Support continuous configuration line when parsing the inherited
configuration file [Stas]

Since some of the inherited from the global httpd.conf modules require
mod_perl to be loaded first, arrange for that to happen. [Stas]

Don't try to set ulimit unlimited for coredumps on Solaris, unless run
as root [Rob Kinyon <Rob.Kinyon@progressive-medical.com>]

Added '-httpd_conf_extra <filename>' configuration option to
allow a file of server config directives to be inherited